# apex

./: .gitignore  CMakeLists.txt
bertha-lib/: CMakeLists.txt
cmake-modules/: FindFFTW3f.cmake  FindLibgit2.cmake
coh/: CMakeLists.txt
common/: CMakeLists.txt
documentation/development/: compiling_instructions.txt
src/: CMakeLists.txt
src/lib/apexmain/screen/: parameterlistrundelegate.cpp
src/plugins/: CMakeLists.txt
src/tests/apexmain/: apexmaintest.cpp
